--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300;0,400;1,400&display=swap');
+
 @font-face {
 	font-family: 'subjectivityextra_bold';
 	src: url('./fonts/subjectivity-extrabold-webfont.woff2') format('woff2'),
@@ -15,11 +17,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
 
 :root {
-	--body-color: #f0ead8;
-	--title-color: #021e66;
+	--body-color: #ffffff;
+	--title-color: #0b132b;
+	--sub-text-color: #1c2541;
 	--name-font: 'subjectivityextra_bold', sans-serif;
 	--title-font: 'subjectivityregular', sans-serif;
-	--normal-font: 'Montserrat', sans-serif;
+	--text-font: 'Shantell Sans', cursive;
 }
 
 /* --------------------BASE CSS------------------------- */
@@ -53,14 +56,13 @@ a {
 .full_page {
 	height: 100%;
 	display: inline-block;
-	width: 100vw;
+	width: 100%;
 }
 /* .main {
 	height: 100%;
-	/* overflow-x: scroll;
+	overflow-x: scroll;
 	width: 400%;
 	display: flex;
-	overflow-x: hidden;
 }*/
 
 /* ----------------------------NAVIGATION-------------------- */
@@ -68,14 +70,14 @@ a {
 .header {
 	width: 100%;
 	/* position: fixed; */
-	top: 0;
+	/* top: 0; */
 	background-color: var(--body-color);
 }
 .nav {
 	display: flex;
 	justify-content: space-between;
-	padding: 20px 60px;
-	margin: 0 auto;
+	padding: 15px 60px;
+	margin: 0 4.5rem;
 	align-items: center;
 }
 
@@ -89,7 +91,7 @@ a {
 	font-family: var(--title-font);
 }
 
-.nav_list a:visited {
+.nav_list a {
 	text-decoration: none;
 	color: var(--title-color);
 }
@@ -98,18 +100,18 @@ a {
 
 .home {
 	display: flex;
-	/* justify-content: center; */
 	align-items: center;
 }
 
 .name {
 	/* 	margin-top: rem; */
-	padding: 2.5rem;
+	padding: 0 2.5rem;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: flex-end;
 	flex-wrap: wrap;
+	margin-top: -130px;
 }
 .my_name {
 	flex-basis: 50%;
@@ -125,24 +127,24 @@ a {
 }
 .title p {
 	font-family: var(--title-font);
-	padding: 2.5rem 3px;
+	padding: 2.5rem 0;
 	font-size: 26px;
-	color: var(--title-color);
+	color: var(--sub-text-color);
 }
 .intro {
 	flex-basis: 50%;
 }
 .intro p {
 	font-family: var(--title-font);
-	font-size: 28px;
-	color: var(--title-color);
+	font-size: 1.75rem;
+	color: var(--sub-text-color);
 }
 .welcome {
 	font-family: var(--title-font);
-	font-size: 28px;
+	font-size: 1.75rem;
 	color: var(--title-color);
 	font-weight: bold;
-	margin-top: -20px;
+	margin-top: -1.25rem;
 }
 
 /* -----------------------------ABOUT SECTION----------------------------- */
@@ -150,34 +152,56 @@ a {
 	display: flex;
 	flex-wrap: wrap;
 	height: fit-content;
-	width: 100%;
 	padding: 2.5rem;
-	margin: 0 2.5rem;
+	gap : 3.5rem;
+	justify-content: center;
+	font-family: var(--text-font);
+	/* margin: 0 2.5rem; */
 }
+
+.about h1{
+	text-align: center;
+	font-family: var(--title-font);
+	color: var(--title-color);
+}
+
 .about_img img {
-	width: 350px;
-	height: 500px;
+	width: 400px;
+	height: 400px;
 	border-radius: 15px;
 }
 
-.about__title {
-	border: 1px solid var(--title-color);
-}
-
-.about__text h1 {
-	font-size: 100px;
-	font-family: var(--title-font);
+.about_title {
+	margin-top: -0.6rem;
+	font-size: 2.8125rem;
 }
 
 .about_text {
-	border: 1px solid var(--title-color);
+	padding: 1rem;
+	flex-basis: 62%;
+	/* text-align: center; */
+	font-weight: 300;
+}
+.resume_link{
+	
 }
 
+.skill_sets h1{	
+	font-size: 1.5rem;
+}
 .skill_sets {
 	border: 1px solid var(--title-color);
+	flex-basis: 45%;
+	padding: 1rem;
+}
+
+.experience h1{
+	font-size: 1.5rem;
 }
 .experience {
 	border: 1px solid var(--title-color);
+	flex-basis: 45%;
+	padding: 1rem;
 }
 
 /* -----------------------CONTACT PAGE CSS-------------------------- */
