--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300;0,400;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 @font-face {
 	font-family: 'subjectivityextra_bold';
@@ -14,15 +14,13 @@
 	font-weight: normal;
 	font-style: normal;
 }
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
-
 :root {
 	--body-color: #ffffff;
 	--title-color: #0b132b;
 	--sub-text-color: #1c2541;
 	--name-font: 'subjectivityextra_bold', sans-serif;
 	--title-font: 'subjectivityregular', sans-serif;
-	--text-font: 'Shantell Sans', cursive;
+	--text-font:'Montserrat Alternates', sans-serif;
 }
 
 /* --------------------BASE CSS------------------------- */
@@ -87,7 +85,7 @@ a {
 	align-items: center;
 	gap: 3rem;
 	color: var(--title-color);
-	font-size: 20px;
+	font-size: 18px;
 	font-family: var(--title-font);
 }
 
@@ -111,7 +109,7 @@ a {
 	justify-content: space-around;
 	align-items: flex-end;
 	flex-wrap: wrap;
-	margin-top: -130px;
+	margin-top: -110px;
 }
 .my_name {
 	flex-basis: 50%;
@@ -157,6 +155,7 @@ a {
 	justify-content: center;
 	font-family: var(--text-font);
 	/* margin: 0 2.5rem; */
+	font-weight: 400;
 }
 
 .about h1{
@@ -177,32 +176,72 @@ a {
 }
 
 .about_text {
-	padding: 1rem;
+	padding: 1.5rem;
 	flex-basis: 62%;
-	/* text-align: center; */
-	font-weight: 300;
 }
+
+.aboutme{
+	margin-bottom: 30px;;
+}
+
 .resume_link{
-	
+	padding: 10px 20px;
+	border: 3px solid #b8c0ff;
+	border-radius: 50px;
+	color: var(--sub-text-color);
+	/* background-color: #bbd0ff; */
 }
 
-.skill_sets h1{	
-	font-size: 1.5rem;
-}
 .skill_sets {
-	border: 1px solid var(--title-color);
-	flex-basis: 45%;
-	padding: 1rem;
+	flex-basis: 47%;
+	padding: 1.5rem;
 }
 
-.experience h1{
+.skill_sets h1, .experience h1{	
 	font-size: 1.5rem;
+	margin-bottom: 30px;
 }
+
+.skill_list{
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	padding: 0;
+	flex-wrap: wrap;
+	gap: 2.5rem;
+	margin-top: 20px;
+}
+
 .experience {
-	border: 1px solid var(--title-color);
-	flex-basis: 45%;
-	padding: 1rem;
+	flex-basis: 47%;
+	padding: 1.5rem;
 }
+.outer{
+	border-left: 2px solid var(--title-color);
+	margin-left: 30px;
+}
+.card{
+  position: relative;
+  margin: 0 0 1.25rem 1.25rem;
+  padding: 8px 24px;
+  background: #bbd0ff;
+  border-radius: 20px;
+  max-width: 400px;
+  border: 2px solid #b8c0ff;
+}
+
+.title::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background: white;
+  border-radius: 999px;
+  left: -32px;
+  border: 3px solid #b8c0ff;
+  background-color: #b8c0ff;
+}
+
 
 /* -----------------------CONTACT PAGE CSS-------------------------- */
 
@@ -221,12 +260,12 @@ a {
 }
 .headline {
 	font-family: var(--title-font);
-	font-size: 50px;
+	font-size: 2.8125rem;
 	text-align: center;
 }
 
 .contact_details p {
-	font-family: var(--title-font);
+	font-family: var(--text-font);
 	font-weight: 400;
 	text-align: center;
 	font-size: 14px;
