added about styles

--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -218,8 +218,8 @@ a {
 }
 .outer{
 	border-left: 2px solid var(--title-color);
-	margin-left: 30px;
-	padding-left: 30px;;
+	margin-left: 1.875rem;
+	padding-left: 1.875rem;
 }
 .card{
   position: relative;
