--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,300;0,400;1,300;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap');
 @font-face {
 	font-family: 'subjectivityextra_bold';
 	src: url('./fonts/subjectivity-extrabold-webfont.woff2') format('woff2'),
@@ -20,7 +19,7 @@
 	--sub-text-color: #1c2541;
 	--name-font: 'subjectivityextra_bold', sans-serif;
 	--title-font: 'subjectivityregular', sans-serif;
-	--text-font:'Montserrat Alternates', sans-serif;
+	--text-font: 'Montserrat Alternates', sans-serif;
 }
 
 /* --------------------BASE CSS------------------------- */
@@ -151,23 +150,53 @@ a {
 	flex-wrap: wrap;
 	height: fit-content;
 	padding: 2.5rem;
-	gap : 3.5rem;
+	gap: 3.5rem;
 	justify-content: center;
 	font-family: var(--text-font);
 	/* margin: 0 2.5rem; */
 	font-weight: 400;
+	align-items: center;
 }
 
-.about h1{
+.about h1 {
 	text-align: center;
 	font-family: var(--title-font);
 	color: var(--title-color);
 }
 
+/* .img_outer {
+	width: 350px;
+	height: 490px;
+	padding: 1px;
+	display: inline-block;
+	border: 3px solid #788bff;
+	font-size: 2.5rem;
+	border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+	text-transform: uppercase;
+	letter-spacing: 0.3ch;
+	background: #ffffff;
+	position: relative;
+	z-index: 2;
+
+	&::before {
+		content: '';
+		border: 2px solid #788bff;
+		display: block;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate3d(-50%, -50%, 0) scale(1.015) rotate(0.5deg);
+		border-radius: 1% 1% 2% 4% / 2% 6% 5% 4%;
+		z-index: 3;
+	}
+} */
+
 .about_img img {
-	width: 400px;
-	height: 400px;
-	border-radius: 15px;
+	width: 340px;
+	height: 450px;
+	z-index: 1;
 }
 
 .about_title {
@@ -180,16 +209,33 @@ a {
 	flex-basis: 62%;
 }
 
-.aboutme{
-	margin-bottom: 30px;;
+.aboutme {
+	font-size: 18px;
+	margin-bottom: 30px;
+	line-height: 27px;
+}
+.underline-gradient {
+	font-weight: 500;
+	background-image: linear-gradient(
+		120deg,
+		hsla(232, 100%, 74%, 1) 0%,
+		hsla(229, 78%, 63%, 1) 100%
+	);
+	background-repeat: no-repeat;
+	background-size: 100% 0.2em;
+	background-position: 0 88%;
+	transition: background-size 0.25s ease-in;
+	&:hover {
+		background-size: 100% 88%;
+	}
 }
 
-.resume_link{
+.resume_link {
 	padding: 10px 20px;
-	border: 3px solid #b8c0ff;
+	border: 2px solid #788bff;
 	border-radius: 50px;
 	color: var(--sub-text-color);
-	/* background-color: #bbd0ff; */
+	background-color: #bfd7ff;
 }
 
 .skill_sets {
@@ -197,12 +243,13 @@ a {
 	padding: 1.5rem;
 }
 
-.skill_sets h1, .experience h1{	
+.skill_sets h1,
+.experience h1 {
 	font-size: 1.5rem;
 	margin-bottom: 30px;
 }
 
-.skill_list{
+.skill_list {
 	display: flex;
 	justify-content: center;
 	flex-direction: row;
@@ -216,33 +263,32 @@ a {
 	flex-basis: 47%;
 	padding: 1.5rem;
 }
-.outer{
+.outer {
 	border-left: 2px solid var(--title-color);
 	margin-left: 1.875rem;
 	padding-left: 1.875rem;
 }
-.card{
-  position: relative;
-  margin: 0 0 1.25rem 1.25rem;
-  padding: 8px 24px;
-  background: #bbd0ff;
-  border-radius: 20px;
-  max-width: 400px;
-  border: 2px solid #b8c0ff;
+.card {
+	position: relative;
+	margin: 0 0 1.25rem 1.25rem;
+	padding: 8px 24px;
+	background: #bfd7ff;
+	border-radius: 20px;
+	max-width: 400px;
+	border: 2px solid #788bff;
 }
 
 .title::before {
-  content: "";
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  background: white;
-  border-radius: 999px;
-  left: -62px;
-  border: 3px solid #b8c0ff;
-  background-color: #b8c0ff;
+	content: '';
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	background: white;
+	border-radius: 999px;
+	left: -62px;
+	border: 3px solid #788bff;
+	background-color: #bfd7ff;
 }
-
 
 /* -----------------------CONTACT PAGE CSS-------------------------- */
 
