--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -61,6 +61,10 @@ a {
 	width: 400%;
 	display: flex;
 }*/
+section {
+	margin-bottom: 90px;
+	margin-top: 50px;
+}
 
 /* ----------------------------NAVIGATION-------------------- */
 
@@ -69,8 +73,9 @@ a {
 	display: inline-block;
 	position: fixed;
 	top: 0;
+	backdrop-filter: blur(30px);
+
 	z-index: 100;
-	background-color: var(--body-color);
 }
 .nav {
 	display: flex;
@@ -108,7 +113,7 @@ a {
 	justify-content: space-around;
 	align-items: flex-end;
 	flex-wrap: wrap;
-	margin-top: 100px;
+	margin-top: 0px;
 }
 .my_name {
 	flex-basis: 50%;
@@ -289,4 +294,111 @@ a {
 }
 .link:visited {
 	color: var(--title-color);
+}
+
+/* -----------------------Background Gradient Effect CSS-------------------------- */
+.gradient-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: -1;
+
+	div {
+		position: absolute;
+		opacity: 0.6;
+		filter: blur(65px);
+
+		&:nth-of-type(1) {
+			width: 1000px;
+			height: 1000px;
+			border-radius: 50%;
+			background: radial-gradient(
+				circle,
+				rgba(63, 94, 251, 1) 0%,
+				rgba(195, 203, 249, 1) 39%,
+				rgba(244, 245, 255, 1) 63%,
+				rgba(255, 255, 255, 1) 100%
+			);
+			top: -15%;
+			left: -11%;
+		}
+
+		&:nth-of-type(2) {
+			width: 1000px;
+			height: 1000px;
+			border-radius: 50%;
+			background: radial-gradient(
+				circle,
+				rgba(63, 94, 251, 1) 0%,
+				rgba(195, 203, 249, 1) 39%,
+				rgba(244, 245, 255, 1) 63%,
+				rgba(255, 255, 255, 1) 100%
+			);
+			top: 6%;
+			left: 56%;
+		}
+
+		&:nth-of-type(3) {
+			width: 993px;
+			height: 985px;
+			border-radius: 50%;
+			background: radial-gradient(
+				circle,
+				hsla(254, 74%, 65%, 0.9) 0%,
+				hsla(276, 91%, 79%, 0.9) 39%,
+				hsla(276, 60%, 86%, 0.5) 63%,
+				rgba(255, 255, 255, 1) 100%
+			);
+			top: 25%;
+			left: 21%;
+		}
+
+		/* &:nth-of-type(4) {
+			width: 993px;
+			height: 985px;
+			border-radius: 50%;
+			background: radial-gradient(
+				circle,
+				hsla(254, 74%, 65%, 0.9) 0%,
+				hsla(276, 91%, 79%, 0.9) 39%,
+				hsla(276, 60%, 86%, 0.5) 63%,
+				rgba(255, 255, 255, 1) 100%
+			);
+			top: 25%;
+			left: 21%;
+		} */
+	}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1920px) {
+	.container {
+		margin-left: 3.5rem;
+		margin-right: 3.5rem;
+	}
+
+	.about_img img {
+		width: 400px;
+		height: 490px;
+	}
+
+	.about_title {
+		font-size: 2rem;
+	}
+
+	.about_text {
+		flex-basis: 61%;
+	}
+
+	.aboutme {
+		font-size: 16px;
+		line-height: 27px;
+	}
+	.skill_sets {
+		flex-basis: 45%;
+	}
+	.experience {
+		flex-basis: 45%;
+	}
 }
