--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -57,21 +57,18 @@ a {
 }
 
 .full_page {
-	height: 100%;
+	height: 100vh;
 	display: inline-block;
 	width: 100%;
 }
 
-/* .main {
-	height: 100%;
-	overflow-x: scroll;
-	width: 400%;
-	display: flex;
-}*/
-section {
-	margin-bottom: 90px;
-	margin-top: 50px;
+main {
+	overflow: hidden
 }
+
+/* section {
+	margin-bottom: 50px;
+} */
 
 /* ----------------------------NAVIGATION-------------------- */
 
@@ -100,10 +97,11 @@ section {
 	color: var(--title-color);
 	font-size: 18px;
 	font-family: var(--title-font);
+	font-weight: bo;
 }
 
 .nav_list a {
-	text-decoration: none;
+	/* text-decoration: none; */
 	color: var(--title-color);
 }
 
@@ -166,6 +164,10 @@ section {
 }
 
 /* -----------------------------ABOUT SECTION----------------------------- */
+/* .about_section {
+	height: fit-content;
+} */
+
 .about_desc {
 	display: flex;
 	flex-wrap: wrap;
@@ -182,10 +184,22 @@ section {
 	color: var(--title-color);
 }
 
-.about_img img {
-	width: 450px;
-	height: 450px;
-	z-index: 1;
+.img_outer {
+	width: 400px;
+	height: 400px;
+
+
+}
+
+.img_outer img {
+	width: 100%;
+	height: 100%;
+	object-fit: fill;
+	border: solid 3px #3f37c9;
+	border-top-left-radius: 40px 140px;
+	border-top-right-radius: 23px 130px;
+	border-bottom-left-radius: 110px 19px;
+	border-bottom-right-radius: 120px 24px;
 }
 
 .about_title {
@@ -221,9 +235,11 @@ section {
 
 .resume_link {
 	padding: 10px 20px;
-	border: 2px solid #3f37c9;
+	border: 3px solid #3f37c9;
+	border-image: linear-gradient(#008aff, #86d472);
 	border-radius: 50px;
 	color: var(--sub-text-color);
+
 }
 
 .skill_sets,
@@ -276,7 +292,11 @@ section {
 	padding: 8px 24px;
 	border-radius: 20px;
 	max-width: 400px;
-	border: 2px solid #3e37c9;
+	border: 1px solid rgba(63, 55, 201, 0.025);
+	border-radius: 20px;
+	background-color: rgba(255, 255, 255, 0.175);
+	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.086);
+	backdrop-filter: blur(15px);
 }
 
 .title::before {
@@ -286,8 +306,75 @@ section {
 	height: 15px;
 	background: white;
 	border-radius: 999px;
-	left: -63px;
+	left: -61px;
 	border: 3px solid #3f37c9;
+}
+
+
+/* -----------------------PROJECTS PAGE CSS-------------------------- */
+.project {
+	font-family: var(--text-font);
+	font-weight: 400;
+}
+
+.section_heading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 90px;
+	margin-bottom: 80px;
+}
+
+.project_heading {
+	font-family: var(--title-font);
+	color: var(--title-color);
+	font-size: 2.8125rem;
+}
+
+.project_cards {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 60px;
+	gap: 80px;
+}
+
+.cards {
+	display: flex;
+	align-items: center;
+	width: 75vw;
+	/* max-width: 650px; */
+	padding: 50px 30px 50px 20px;
+	border: 1px solid rgba(63, 55, 201, 0.025);
+	border-radius: 20px;
+	background-color: rgba(255, 255, 255, 0.175);
+	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.086);
+	backdrop-filter: blur(19px);
+}
+
+.project_img {
+	max-width: 280px;
+	width: 28vw;
+	height: 300px;
+	object-fit: cover;
+	margin-left: -60px;
+	margin-right: 30px;
+	border-radius: inherit;
+	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.086);
+
+}
+
+.project_about {
+	margin-bottom: 30px;
+}
+
+.project_link {
+	padding: 10px 20px;
+	border: 2px solid #3f37c9;
+	border-radius: 50px;
+	color: var(--sub-text-color);
+	font-size: 18px;
+	font-weight: 500;
 }
 
 /* -----------------------CONTACT PAGE CSS-------------------------- */
@@ -353,6 +440,7 @@ section {
 	.container {
 		margin-left: 3.5rem;
 		margin-right: 3.5rem;
+		/* max-width: 1280px; */
 	}
 
 	.about_img img {
@@ -379,5 +467,62 @@ section {
 
 	.experience {
 		flex-basis: 45%;
+	}
+
+	.project_cards {
+		flex-wrap: wrap;
+
+	}
+
+	/* 	.project {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+
+	.project_cards {
+		flex-direction: column;
+	}
+
+	.cards {
+		flex-direction: column;
+		text-align: center;
+		margin: 0 40px;
+		padding-left: 50px;
+		padding-right: 50px;
+		width: 100%;
+
+	}
+
+	.project_img {
+		margin: -100px 0 30px 0;
+		width: 100%;
+		max-width: 1000px;
+	} */
+}
+
+@media (width <=740px) {
+	.project {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+
+	.project_cards {
+		flex-direction: column;
+	}
+
+	.cards {
+		flex-direction: column;
+		text-align: center;
+		margin: 0 40px;
+		padding-left: 50px;
+		padding-right: 50px;
+		width: 100%;
+
+	}
+
+	.project_img {
+		margin: -100px 0 30px 0;
+		width: 100%;
+		max-width: 1000px;
 	}
 }
