--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -20,6 +20,7 @@
 	--body-color: #ffffff;
 	--title-color: #0b132b;
 	--sub-text-color: #1c2541;
+	--border-color: rgb(63, 55, 201);
 	--name-font: 'subjectivityextra_bold', sans-serif;
 	--title-font: 'subjectivityregular', sans-serif;
 	--text-font: 'Montserrat Alternates', sans-serif;
@@ -64,6 +65,12 @@ a {
 
 main {
 	overflow: hidden
+}
+
+h2,
+h3,
+h4 {
+	font-family: var(--title-font);
 }
 
 /* section {
@@ -195,7 +202,7 @@ main {
 	width: 100%;
 	height: 100%;
 	object-fit: fill;
-	border: solid 3px #3f37c9;
+	border: solid 3px var(--border-color);
 	border-top-left-radius: 40px 140px;
 	border-top-right-radius: 23px 130px;
 	border-bottom-left-radius: 110px 19px;
@@ -220,9 +227,7 @@ main {
 
 .underline-gradient {
 	font-weight: 500;
-	background-image: linear-gradient(135deg,
-			hsla(169, 76%, 48%, 1) 0%,
-			hsla(67, 87%, 82%, 1) 100%);
+	background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
 	background-repeat: no-repeat;
 	background-size: 100% 0.2em;
 	background-position: 0 88%;
@@ -234,12 +239,18 @@ main {
 }
 
 .resume_link {
-	padding: 10px 20px;
-	border: 3px solid #3f37c9;
-	border-image: linear-gradient(#008aff, #86d472);
+	padding: 9px 25px;
+	background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
 	border-radius: 50px;
 	color: var(--sub-text-color);
+	font-size: 16px;
+	font-weight: 500;
+	transition: .3s ease-in-out;
+}
 
+.resume_link:hover {
+	background-color: var(--border-color);
+	box-shadow: 5px 5px 0 #000;
 }
 
 .skill_sets,
@@ -256,7 +267,8 @@ main {
 
 .skill_list {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
+	flex-wrap: wrap;
 	flex-direction: row;
 	padding: 0;
 	flex-wrap: wrap;
@@ -271,8 +283,8 @@ main {
 }
 
 .skill_img img {
-	width: 80px;
-	height: 80px;
+	width: 60px;
+	height: 60px;
 
 }
 
@@ -291,7 +303,7 @@ main {
 	margin: 0 0 1.25rem 1.25rem;
 	padding: 8px 24px;
 	border-radius: 20px;
-	max-width: 400px;
+	/* max-width: 400px; */
 	border: 1px solid rgba(63, 55, 201, 0.025);
 	border-radius: 20px;
 	background-color: rgba(255, 255, 255, 0.175);
@@ -307,7 +319,7 @@ main {
 	background: white;
 	border-radius: 999px;
 	left: -61px;
-	border: 3px solid #3f37c9;
+	border: 3px solid hsla(152, 100%, 50%, 1);
 }
 
 
@@ -360,7 +372,7 @@ main {
 	margin-left: -60px;
 	margin-right: 30px;
 	border-radius: inherit;
-	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.086);
+	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.149);
 
 }
 
@@ -369,12 +381,18 @@ main {
 }
 
 .project_link {
-	padding: 10px 20px;
-	border: 2px solid #3f37c9;
+	padding: 10px 25px;
+	background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+	/* border: 3px solid #3f37c9; */
 	border-radius: 50px;
 	color: var(--sub-text-color);
 	font-size: 18px;
 	font-weight: 500;
+	transition: .3s ease-in-out;
+}
+
+.project_link:hover {
+	box-shadow: 5px 5px 0 #000;
 }
 
 /* -----------------------CONTACT PAGE CSS-------------------------- */
@@ -403,15 +421,15 @@ main {
 	font-family: var(--text-font);
 	font-weight: 400;
 	text-align: center;
-	font-size: 14px;
+	font-size: 15px;
 }
 
 .link {
 	color: var(--title-color);
-	border-bottom: 1px solid var(--title-color);
 }
 
 .link:visited {
+	font-weight: 500;
 	color: var(--title-color);
 }
 
