--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -104,13 +104,14 @@ h4 {
 	color: var(--title-color);
 	font-size: 18px;
 	font-family: var(--title-font);
-	font-weight: bo;
+	font-weight: bold;
 }
 
 .nav_list a {
 	/* text-decoration: none; */
 	color: var(--title-color);
 }
+
 
 /* ================================== HOME PAGE ================================== */
 
@@ -227,7 +228,7 @@ h4 {
 
 .underline-gradient {
 	font-weight: 500;
-	background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+	background: linear-gradient(90deg, hsla(238, 100%, 71%, 1) 0%, hsla(295, 100%, 84%, 1) 100%);
 	background-repeat: no-repeat;
 	background-size: 100% 0.2em;
 	background-position: 0 88%;
@@ -235,22 +236,23 @@ h4 {
 
 	&:hover {
 		background-size: 100% 88%;
+		color: #ffffff;
 	}
 }
 
 .resume_link {
 	padding: 9px 25px;
-	background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+	border: 2px solid var(--border-color);
 	border-radius: 50px;
 	color: var(--sub-text-color);
 	font-size: 16px;
 	font-weight: 500;
-	transition: .3s ease-in-out;
+	transition: .5s;
 }
 
 .resume_link:hover {
 	background-color: var(--border-color);
-	box-shadow: 5px 5px 0 #000;
+	color: #ffffff;
 }
 
 .skill_sets,
@@ -319,7 +321,7 @@ h4 {
 	background: white;
 	border-radius: 999px;
 	left: -61px;
-	border: 3px solid hsla(152, 100%, 50%, 1);
+	border: 3px solid var(--border-color);
 }
 
 
@@ -381,18 +383,18 @@ h4 {
 }
 
 .project_link {
-	padding: 10px 25px;
-	background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
-	/* border: 3px solid #3f37c9; */
+	padding: 9px 25px;
+	border: 2px solid var(--border-color);
 	border-radius: 50px;
 	color: var(--sub-text-color);
 	font-size: 18px;
 	font-weight: 500;
-	transition: .3s ease-in-out;
+	transition: .5s;
 }
 
 .project_link:hover {
-	box-shadow: 5px 5px 0 #000;
+	background-color: var(--border-color);
+	color: #ffffff;
 }
 
 /* -----------------------CONTACT PAGE CSS-------------------------- */
@@ -421,16 +423,16 @@ h4 {
 	font-family: var(--text-font);
 	font-weight: 400;
 	text-align: center;
-	font-size: 15px;
+	font-size: 16px;
 }
 
 .link {
 	color: var(--title-color);
 }
 
-.link:visited {
+.link:hover {
 	font-weight: 500;
-	color: var(--title-color);
+	color: #ffffff;
 }
 
 /* -----------------------Background Gradient Effect CSS-------------------------- */
