--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,28 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-@font-face {
-	font-family: 'subjectivityextra_bold';
-	src: url('./fonts/subjectivity-extrabold-webfont.woff2') format('woff2'),
-		url('./fonts/subjectivity-extrabold-webfont.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'subjectivityregular';
-	src: url('./fonts/subjectivity-regular-webfont.woff2') format('woff2'),
-		url('./fonts/subjectivity-regular-webfont.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&display=swap');
 
 :root {
 	--body-color: #ffffff;
 	--title-color: #0b132b;
 	--sub-text-color: #1c2541;
 	--border-color: rgb(63, 55, 201);
-	--name-font: 'subjectivityextra_bold', sans-serif;
-	--title-font: 'subjectivityregular', sans-serif;
+	--name-font: 'Poppins', sans-serif;
+	--title-font: 'Poppins', sans-serif;
 	--text-font: 'Poppins', sans-serif;
 
 	--header-height: 3.5rem;
@@ -66,7 +51,7 @@ a {
 }
 
 main {
-	overflow: hidden
+	overflow: hidden;
 }
 
 h2,
@@ -108,7 +93,7 @@ h4 {
 	color: var(--title-color);
 	font-size: 18px;
 	font-family: var(--title-font);
-	font-weight: bold;
+	font-weight: 500;
 }
 
 .nav_list a {
@@ -119,12 +104,12 @@ h4 {
 	display: inline-block;
 	padding: 10px;
 	border: 2px solid transparent;
-	transition: all .1s ease-in;
+	transition: all 0.1s ease-in;
 }
 
 .nav_link:hover {
 	border: 2px solid var(--title-color);
-	transition: all .3s ease-in !important;
+	transition: all 0.3s ease-in !important;
 }
 
 .nav__close {
@@ -179,7 +164,7 @@ h4 {
 .intro {
 	flex-basis: 50%;
 	align-items: center;
-	order: 2
+	order: 2;
 }
 
 .intro p {
@@ -197,9 +182,6 @@ h4 {
 }
 
 /* -----------------------------ABOUT SECTION----------------------------- */
-/* .about_section {
-	height: fit-content;
-} */
 
 .about_desc {
 	display: flex;
@@ -248,7 +230,11 @@ h4 {
 
 .underline-gradient {
 	font-weight: 500;
-	background: linear-gradient(90deg, hsla(238, 100%, 71%, 1) 0%, hsla(295, 100%, 84%, 1) 100%);
+	background: linear-gradient(
+		90deg,
+		hsla(238, 100%, 71%, 1) 0%,
+		hsla(295, 100%, 84%, 1) 100%
+	);
 	background-repeat: no-repeat;
 	background-size: 100% 1em;
 	background-position: 100% 88%;
@@ -267,7 +253,7 @@ h4 {
 	color: var(--sub-text-color);
 	font-size: 16px;
 	font-weight: 500;
-	transition: .5s;
+	transition: 0.5s;
 }
 
 .resume_link:hover {
@@ -307,7 +293,6 @@ h4 {
 .skill_img img {
 	width: 60px;
 	height: 60px;
-
 }
 
 .experience h1 {
@@ -344,7 +329,6 @@ h4 {
 	border: 3px solid var(--border-color);
 }
 
-
 /* -----------------------PROJECTS PAGE CSS-------------------------- */
 .project {
 	font-family: var(--text-font);
@@ -367,6 +351,7 @@ h4 {
 
 .project_cards {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	margin-top: 60px;
@@ -388,14 +373,17 @@ h4 {
 
 .project_img {
 	max-width: 280px;
-	width: 28vw;
+	width: 300px;
 	height: 300px;
 	object-fit: cover;
 	margin-left: -60px;
 	margin-right: 30px;
 	border-radius: inherit;
 	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.149);
+}
 
+.project_tech {
+	line-height: 18px;
 }
 
 .project_about {
@@ -403,17 +391,25 @@ h4 {
 	line-height: 28px;
 }
 
-.project_link {
+.project_links {
+	display: flex;
+	flex-direction: row;
+	gap: 15px;
+}
+
+.project_link,
+.source_link {
 	padding: 9px 25px;
 	border: 2px solid var(--border-color);
 	border-radius: 50px;
 	color: var(--sub-text-color);
 	font-size: 18px;
 	font-weight: 500;
-	transition: .5s;
+	transition: color 0.3s ease-in-out;
 }
 
-.project_link:hover {
+.project_link:hover,
+.source_link:hover {
 	background-color: var(--border-color);
 	color: #ffffff;
 }
@@ -458,9 +454,13 @@ h4 {
 
 .underline-gradient-link {
 	font-weight: 500;
-	background: linear-gradient(90deg, hsla(238, 100%, 71%, 1) 0%, hsla(295, 100%, 84%, 1) 100%);
+	background: linear-gradient(
+		90deg,
+		hsla(238, 100%, 71%, 1) 0%,
+		hsla(295, 100%, 84%, 1) 100%
+	);
 	background-repeat: no-repeat;
-	background-size: 100% .25em;
+	background-size: 100% 0.25em;
 	background-position: 0 88%;
 	transition: background-size 0.25s ease-in;
 	color: #ffffff;
@@ -471,8 +471,6 @@ h4 {
 	}
 }
 
-
-
 /* -----------------------Background Gradient Effect CSS-------------------------- */
 .gradient-container {
 	position: fixed;
@@ -482,17 +480,18 @@ h4 {
 	height: 100vh;
 	z-index: -1;
 	background-color: hsla(0, 0%, 100%, 1);
-	background-image:
-		radial-gradient(at 74% 32%, hsla(268, 100%, 91%, 1) 0px, transparent 50%),
+	background-image: radial-gradient(
+			at 74% 32%,
+			hsla(268, 100%, 91%, 1) 0px,
+			transparent 50%
+		),
 		radial-gradient(at 12% 73%, hsla(230, 100%, 88%, 1) 0px, transparent 50%),
 		radial-gradient(at 74% 76%, hsla(214, 100%, 93%, 1) 0px, transparent 50%),
 		radial-gradient(at 0% 0%, hsla(215, 100%, 97%, 1) 0px, transparent 50%);
 	filter: blur(5px);
 }
 
-
 /* -----------------------Responsive CSS-------------------------- */
-
 
 @media screen and (min-width: 992px) and (max-width: 1920px) {
 	.container {
@@ -527,7 +526,6 @@ h4 {
 
 	.project_cards {
 		flex-wrap: wrap;
-
 	}
 }
 
@@ -549,7 +547,6 @@ h4 {
 		padding-left: 50px;
 		padding-right: 50px;
 		width: 100%;
-
 	}
 
 	.project_img {
@@ -604,7 +601,7 @@ h4 {
 		display: inline-block;
 		padding: 10px;
 		border: 2px solid transparent;
-		transition: all .1s ease-in;
+		transition: all 0.1s ease-in;
 		color: var(--title-color);
 	}
 
@@ -658,7 +655,6 @@ h4 {
 
 	.title {
 		order: 2;
-
 	}
 
 	.intro p,
@@ -703,7 +699,6 @@ h4 {
 	.about_text {
 		padding: 12px;
 		flex-basis: 100%;
-
 	}
 
 	.aboutme {
@@ -731,7 +726,7 @@ h4 {
 
 	.skill_list {
 		padding: 0;
-		gap: .75rem;
+		gap: 0.75rem;
 		margin-top: 20px;
 		font-weight: 500;
 	}
@@ -758,7 +753,7 @@ h4 {
 	}
 
 	.card {
-		margin: .75rem 0;
+		margin: 0.75rem 0;
 		width: 100%;
 	}
 
@@ -770,7 +765,6 @@ h4 {
 	.title::before {
 		display: none;
 	}
-
 
 	.hello {
 		font-size: 60px;
@@ -793,14 +787,19 @@ h4 {
 		padding: 25px;
 	}
 
+	.project_links {
+		justify-content: center;
+	}
+
 	.project_about {
 		font-size: 15px;
 		line-height: 20px;
 	}
 
-	.project_link {
+	.project_link,
+	.source_link {
 		font-size: 14px;
-		padding: 9px 9px;
+		padding: 10px 10px;
 	}
 }
 
@@ -812,7 +811,6 @@ h4 {
 }
 
 @media screen and (min-width: 770px) and (max-width: 1025px) {
-
 	.container {
 		margin: 0 auto;
 	}
@@ -865,5 +863,4 @@ h4 {
 	.contact_details {
 		padding: 0 30px;
 	}
-
 }
