--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&display=swap');
 
-
 :root {
 	--body-color: #ffffff;
 	--title-color: #0b132b;
@@ -148,6 +147,7 @@ h4 {
 	font-size: 7vw;
 	color: var(--title-color);
 	margin: 0;
+	line-height: 7vw;
 }
 
 .title {
@@ -373,9 +373,9 @@ h4 {
 }
 
 .project_img {
-	max-width: 280px;
-	width: 300px;
-	height: 300px;
+	max-width: 300px;
+	width: 350px;
+	height: 350px;
 	object-fit: cover;
 	margin-left: -60px;
 	margin-right: 30px;
